--- a/index.html
+++ b/index.html
@@ -3,3 +3,13 @@ layout: default
 ---
 
 {% include wedding.html %}
+
+{% include howwemet.html %}
+
+{% include proposal.html %}
+
+{% include bridalparty.html %}
+
+{% include accommodations.html %}
+
+{% include nearby.html %}
