--- a/_posts/2016-02-01-bridalparty.html
+++ b/_posts/2016-02-01-bridalparty.html
@@ -9,10 +9,13 @@ title: The Bridal Party
 <img src="/images/beth.jpg" class="bridal-party-photo" />
 {{ bride.first }} {{ bride.last }}
 <h3>Maid of Honor</h3>
+<img src="/images/karen.jpg" class="bridal-party-photo" />
 Karen Wirick
 <h3>Matron of Honor</h3>
+<img src="/images/julie.jpg" class="bridal-party-photo" />
 Julie Henderson
 <h3>Bridesmaid</h3>
+<img src="/images/amanda.jpg" class="bridal-party-photo" />
 Amanda Rubinstein
 </div>
 <div class="bridal-party groom">
