--- a/_posts/2016-02-01-bridalparty.html
+++ b/_posts/2016-02-01-bridalparty.html
@@ -5,28 +5,38 @@ title: The Bridal Party
 
 <div class="bridal-party-container">
 <div class="bridal-party bride">
+<div>
 <h3>Bride</h3>
 <img src="/images/beth.jpg" class="bridal-party-photo" />
-{{ bride.first }} {{ bride.last }}
+Beth Wirick
+</div><div>
 <h3>Maid of Honor</h3>
 <img src="/images/karen.jpg" class="bridal-party-photo" />
 Karen Wirick
+</div><div>
 <h3>Matron of Honor</h3>
 <img src="/images/julie.jpg" class="bridal-party-photo" />
 Julie Henderson
+</div><div>
 <h3>Bridesmaid</h3>
 <img src="/images/amanda.jpg" class="bridal-party-photo" />
 Amanda Rubinstein
 </div>
+</div>
 <div class="bridal-party groom">
+<div>
 <h3>Groom</h3>
 <img src="/images/joe.jpg" class="bridal-party-photo" />
-{{ groom.first }} {{ groom.last }}
+Joseph Hendrix
+</div><div>
 <h3>Best Man</h3>
 Ryan Hendrix
+</div><div>
 <h3>Groomsman</h3>
 Dana Kilner
+</div><div>
 <h3>Groomsman</h3>
 Victor Brady
+</div>
 </div>
 </div>
