--- a/_posts/2016-02-01-bridalparty.html
+++ b/_posts/2016-02-01-bridalparty.html
@@ -8,35 +8,35 @@ title: The Bridal Party
 <div>
 <h3>Bride</h3>
 <img src="/images/beth.jpg" class="bridal-party-photo" />
-Beth Wirick
+<p>Beth Wirick</p>
 </div><div>
 <h3>Maid of Honor</h3>
 <img src="/images/karen.jpg" class="bridal-party-photo" />
-Karen Wirick
+<p>Karen Wirick</p>
 </div><div>
 <h3>Matron of Honor</h3>
 <img src="/images/julie.jpg" class="bridal-party-photo" />
-Julie Henderson
+<p>Julie Henderson</p>
 </div><div>
 <h3>Bridesmaid</h3>
 <img src="/images/amanda.jpg" class="bridal-party-photo" />
-Amanda Rubinstein
+<p>Amanda Rubinstein</p>
 </div>
 </div>
 <div class="bridal-party groom">
 <div>
 <h3>Groom</h3>
 <img src="/images/joe.jpg" class="bridal-party-photo" />
-Joseph Hendrix
+<p>Joseph Hendrix</p>
 </div><div>
 <h3>Best Man</h3>
-Ryan Hendrix
+<p>Ryan Hendrix</p>
 </div><div>
 <h3>Groomsman</h3>
-Dana Kilner
+<p>Dana Kilner</p>
 </div><div>
 <h3>Groomsman</h3>
-Victor Brady
+<p>Victor Brady</p>
 </div>
 </div>
 </div>
