--- a/_posts/2016-02-01-bridalparty.html
+++ b/_posts/2016-02-01-bridalparty.html
@@ -30,12 +30,15 @@ title: The Bridal Party
 <p>Joseph Hendrix</p>
 </div><div>
 <h3>Best Man</h3>
+<img src="/images/ryan.jpg" class="bridal-party-photo" />
 <p>Ryan Hendrix</p>
 </div><div>
 <h3>Groomsman</h3>
+<img src="/images/dana.jpg" class="bridal-party-photo" />
 <p>Dana Kilner</p>
 </div><div>
 <h3>Groomsman</h3>
+<img src="/images/victor.jpg" class="bridal-party-photo" />
 <p>Victor Brady</p>
 </div>
 </div>
