--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: Welcome
 
 <div><img src="/images/engagement-photo.jpg" /></div>
 
-{% for image in site.images %}
+{% for image in site.engagement %}
 <div style="display: none;"><img src="{{ image.path }}" /></div>
 {% endfor %}
