--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Welcome
 <div><img src="/images/engagement-photo.jpg" /></div>
 
 {% for image in site.data.images %}
-<div style="display: none;"><img src="/images/engagement{{ image.filename }}" /></div>
+<div style="display: none;"><img src="/images/engagement/{{ image.filename }}" /></div>
 {% endfor %}
