--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@ $(".inner-photos-div").click(function(){
     }
     
     $(visiblePhoto).hide();
-    $(visiblePhoto).show();  
+    $(nextPhoto).show();  
 });
 </script>
